--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e1337pong",
   "version": "0.0.0",
   "private": true,
+  "proxy": "http://localhost:3010",
   "scripts": {
     "start": "nodemon ./bin/www"
   },
